<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    tools:context="online.himakeit.qrcodekit.ui.activity.AwesomeQRActivity">

    <include
        android:id="@+id/include_tool_bar"
        layout="@layout/layout_tool_action_bar" />

    <RelativeLayout
        android:id="@+id/configViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include_tool_bar"
        android:orientation="vertical"
        android:visibility="visible">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/generate"
            android:clipToPadding="false"
            android:fadingEdge="vertical"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_contents" />

                <EditText
                    android:id="@+id/contents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_name"
                    android:maxLines="3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_size_tips" />

                <EditText
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="800"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_margin_px" />

                <EditText
                    android:id="@+id/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="20"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_data_dot_scale" />

                <EditText
                    android:id="@+id/dotScale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0.3"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />

                <CheckBox
                    android:id="@+id/rounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/awesome_qr_rounded_data_dots" />

                <CheckBox
                    android:id="@+id/autoColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/awesome_qr_automatically_pick_color" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_colordark_tips" />

                <EditText
                    android:id="@+id/colorDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/awesome_qr_colordark_hint"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_colorlight_tips" />

                <EditText
                    android:id="@+id/colorLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/awesome_qr_colorlight_hint"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_background_image_tips" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/backgroundImage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/select" />

                    <Button
                        android:id="@+id/removeBackgroundImage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clear" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_logo_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/logoImage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/select" />

                    <Button
                        android:id="@+id/removeLogoImage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clear" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_logo_margin_tips" />

                <EditText
                    android:id="@+id/logoMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="10"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_logo_corner_radius_tips" />

                <EditText
                    android:id="@+id/logoRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="8"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_logoscale_tips" />

                <EditText
                    android:id="@+id/logoScale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="0.2"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />

                <CheckBox
                    android:id="@+id/whiteMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/awesome_qr_white_margin" />

                <CheckBox
                    android:id="@+id/binarize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/awesome_qr_binarize_all" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/awesome_qr_binarize_threshold_tips" />

                <EditText
                    android:id="@+id/binarizeThreshold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="128"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/generate"
            style="@style/BtnStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/generate" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/resultViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include_tool_bar"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/qrcode"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="16dp"
            android:scaleType="centerInside" />

        <Button
            android:id="@+id/open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <TextView
            android:id="@+id/reedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/awesome_qr_hit_back" />


    </LinearLayout>
</RelativeLayout>
